--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p onclick="alert(1)">Hello World!</p>
     <h1>hi</h1>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae accusamus facilis odit corporis, consequatur aliquid modi eum ducimus voluptate amet, sit vitae eius praesentium error iure explicabo ullam aut labore!</h2>
 
     <script src="js/script.js"></script>
 </body>
