--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=p, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p onclick="alert(1)">Hello World!</p>
     <h1>hi</h1>
-    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae accusamus facilis odit corporis, consequatur aliquid modi eum ducimus voluptate amet, sit vitae eius praesentium error iure explicabo ullam aut labore!</h2>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae accusamus facilis odit corporis,
+        consequatur aliquid modi eum ducimus voluptate amet, sit vitae eius praesentium error iure explicabo ullam aut
+        labore!</h2>
     <h3>Super Duper Drauf</h3>
     <script src="js/script.js"></script>
 </body>
+
 </html>
